# Outlaw_Out_West

./: CMakeLists.txt  README.md
.cache/clangd/index/: game_state.cpp.56EE818DFC164C47.idx  game_state.hpp.A9CA83E67BD8C34F.idx  globals.hpp.A278FB3216FF28B5.idx  input.cpp.200D6758F88AF22B.idx  input.hpp.2325668CA94B4FE5.idx  json.hpp.C644B4A44BE831A6.idx  main.cpp.7F55E4F709140C09.idx  player.cpp.3B8820BD652230FA.idx  player.hpp.2D8EECB1214DC4D1.idx
assets/: config.json
assets/levels/: level_01.json  showcase_level.json
assets/saves/: save.json
include/: audio.hpp  bullet.hpp  camera.hpp  collision.hpp  config.hpp  debug.hpp  enemy.hpp  frame.hpp  game_state.hpp  globals.hpp  hud.hpp  input.hpp  level.hpp  player.hpp
src/: audio.cpp  bullet.cpp  camera.cpp  collision.cpp  config.cpp  debug.cpp  enemy.cpp  frame.cpp  game_state.cpp  hud.cpp  input.cpp  level.cpp  main.cpp  player.cpp
